--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
     "angular-hammer": "^2.2.0",
+    "contentful": "^8.4.2",
     "firebase": "^8.6.8",
     "flexboxgrid": "^6.3.1",
     "rxjs": "~6.6.0",
