--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@aws-amplify/ui-angular": "^1.0.17",
     "angular-hammer": "^2.2.0",
+    "aws-amplify": "^4.2.2",
     "contentful": "^8.4.2",
     "firebase": "^8.6.8",
     "flexboxgrid": "^6.3.1",
