--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@aws-amplify/ui-angular": "^1.0.17",
     "angular-hammer": "^2.2.0",
     "aws-amplify": "^4.2.2",
+    "aws-amplify-angular": "^6.0.8",
     "contentful": "^8.4.2",
     "firebase": "^8.6.8",
     "flexboxgrid": "^6.3.1",
